--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Focus Academy Quiz · Versió ThatQuiz (MVP)</title>
+  <title>Focus Academy Quiz · Versió ThatQQQuiz (MVP)</title>
   <meta name="description" content="Generador de qüestionaris autoavaluables per a Focus Academy. Estil atractiu per a estudiants. Versió inicial tipus ThatQuiz." />
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
