--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <path d="M5 12v4c0 1.66 3.58 3 8 3s8-1.34 8-3v-4l-8 3-8-3z" fill="#a5b4fc"/>
           </svg>
         </div>
-        <div>Focus Academy Quiz</div>
+        <div>Focus Academy QuizZZZZ</div>
       </div>
       <nav class="row">
         <a class="pill" href="#" id="navHome">Inici</a>
