--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Focus Academy Quiz · Versió ThatQQQuiz (MVP)</title>
+  <title>Focus Academy Quiz · Versió ThatQuiz (MVP)</title>
   <meta name="description" content="Generador de qüestionaris autoavaluables per a Focus Academy. Estil atractiu per a estudiants. Versió inicial tipus ThatQuiz." />
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,7 +78,7 @@
             <path d="M5 12v4c0 1.66 3.58 3 8 3s8-1.34 8-3v-4l-8 3-8-3z" fill="#a5b4fc"/>
           </svg>
         </div>
-        <div>Focus Academy QuizZZZZ</div>
+        <div>Focus Academy Quiz</div>
       </div>
       <nav class="row">
         <a class="pill" href="#" id="navHome">Inici</a>
@@ -92,7 +92,7 @@
     <section id="viewSetup" class="grid two">
       <div class="card">
         <div class="card-inner">
-          <div class="h1">Focus Academy Quiz ✨</div>
+          <div class="h1">Focus Academy Quizzz ✨</div>
           <p>Configura un qüestionari ràpid o carrega un conjunt personalitzat amb marca i estètica de la teva acadèmia.</p>
           <div class="grid" style="grid-template-columns:1fr 1fr; gap:12px; margin-top:10px">
             <div>
