--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <!-- TEACHER MODE -->
     <section id="viewTeacher" class="card hide">
       <div class="card-inner">
-        <div class="h2">Mode professor/a</div>
+        <div class="h2">Mode professorxx/a</div>
         <p class="tag">Protegit per codi d'accés senzill. Per defecte: <strong>fa2025</strong></p>
         <div id="authBox" class="row"><input id="pass" placeholder="Introdueix el codi"/><button class="btn btn-primary" id="btnAuth">Entrar</button></div>
         <div id="teacherArea" class="hide">
