--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section id="viewSetup" class="grid two">
       <div class="card">
         <div class="card-inner">
-          <div class="h1">Focus Academy Quizzz ✨</div>
+          <div class="h1">Focus Academy Quiz ✨</div>
           <p>Configura un qüestionari ràpid o carrega un conjunt personalitzat amb marca i estètica de la teva acadèmia.</p>
           <div class="grid" style="grid-template-columns:1fr 1fr; gap:12px; margin-top:10px">
             <div>
